feature: add proper link to colab

--- a/finance/finance.ipynb
+++ b/finance/finance.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)]()\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/LiveCoronaDetector/livecod/blob/master/finance/finance.ipynb)\n",
         "\n",
         "\n",
         "# Financial Analysis\n",
